--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "wanikani-vocab-note-linker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
     "build": "parcel build index.html"
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "7.2.0",
-    "parcel-bundler": "^1.6.1"
-  },
-  "keywords": []
+    "@babel/core": "^7.17.5",
+    "parcel": "^2.3.2"
+  }
 }
